feat(test): 添加了测试content、user的类